--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <h1>Vice Versa</h1>
 <p>Uploaded to GitHUB</p>
+<p>Uploaded to GitHUB2</p>
 
 <form>
     <textarea cols="50" rows="10" name="usertext"></textarea>
