--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <p>Uploaded to GitHUB</p>
 <p>Uploaded to GitHUB2</p>
 
-<form>
+<form action="{% url 'reverse' %}">
     <textarea cols="50" rows="10" name="usertext"></textarea>
     <br>
     <br>
